--- a/package.json
+++ b/package.json
@@ -4,5 +4,18 @@
   "description": "Simple declarative JSON-LD builder",
   "main": "index.js",
   "author": "Mirek Ciastek",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "schema-dts": "^0.5.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsdoc": "^24.0.0",
+    "eslint-plugin-prefer-arrow": "^1.2.0",
+    "jest": "^25.4.0",
+    "tslint-to-eslint-config": "^0.6.0"
+  }
 }
