--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "main": "index.js",
   "author": "Mirek Ciastek",
   "license": "MIT",
+  "scripts": {
+    "build": "NODE_ENV=production tsc ./src/index.ts",
+    "pretest": "./node_modules/.bin/eslint ./src/**/*.ts",
+    "test": "NODE_ENV=test jest --verbose",
+    "test:watch": "NODE_ENV=test jest --verbose --watchAll"
+  },
   "dependencies": {
     "schema-dts": "^0.5.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
