--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test:watch": "NODE_ENV=test jest --verbose --watchAll"
   },
   "dependencies": {
+    "ajv": "^6.12.2",
     "lodash": "^4.17.15",
     "schema-dts": "^0.5.2"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.29.0",
@@ -25,6 +27,12 @@
     "eslint-plugin-jsdoc": "^24.0.0",
     "eslint-plugin-prefer-arrow": "^1.2.0",
     "jest": "^25.4.0",
+    "ts-jest": "^25.4.0",
     "tslint-to-eslint-config": "^0.6.0"
+  },
+  "jest": {
+    "transform": {
+      ".*": "<rootDir>/node_modules/ts-jest"
+    }
   }
 }
