--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "ajv": "^6.12.2",
     "lodash": "^4.17.15",
-    "schema-dts": "^0.5.2"
+    "parse-json": "^5.0.0",
+    "schema-dts": "^0.5.2",
+    "schemaorg-jsd": "^0.15.0"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
+    "@types/parse-json": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
@@ -27,12 +30,24 @@
     "eslint-plugin-jsdoc": "^24.0.0",
     "eslint-plugin-prefer-arrow": "^1.2.0",
     "jest": "^25.4.0",
+    "jest-raw-loader": "^1.0.1",
     "ts-jest": "^25.4.0",
-    "tslint-to-eslint-config": "^0.6.0"
+    "tslint-to-eslint-config": "^0.6.0",
+    "typescript": "^3.8.3"
   },
   "jest": {
     "transform": {
+      "^.+\\.jsd$": "jest-raw-loader",
       ".*": "<rootDir>/node_modules/ts-jest"
-    }
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!schemaorg-jsd)"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "json",
+      "jsd"
+    ]
   }
 }
